--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,11 +2,9 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Yuelu LI (Niko)
     - name: Languages
-      value: English, German
+      value: Chinese, English, Korean
 
 - title: Education
   type: time_table
